cmake_minimum_required(VERSION 3.0)

add_subdirectory(CompetitiveProgramming)
add_subdirectory(CTCI)
add_subdirectory(DesignPattern)
add_subdirectory(DS)
add_subdirectory(FiniteStateMachine)
add_subdirectory(Graph)
add_subdirectory(HashMap)
add_subdirectory(STL_Style_DS)
add_subdirectory(ThreadPool)
add_subdirectory(Threads)